fixed bug of overlapping divs due to float and clearfix

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -364,6 +364,10 @@ footer {
   ._clearfix();
 }
 
+.transfer-details {
+  ._clearfix();
+}
+
 .transfer-message-container {
   position: relative;
 
